# my_os

./: .gdbinit  Cargo.toml  a.txt  build.rs  debug.lldb  flake.nix
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: font.rs  framebuffer.rs  gdt.rs  interrupt.rs  lib.rs  main.rs  serial.rs
src/: main.rs
