[package]
name = "os"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bootloader = "0.11.7"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = ["kernel"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test]
panic = "abort"
