[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.18.0", features = ["derive"] }
bootloader_api = "0.11.7"
spin = "0.9.8"
x86_64 = "0.15.1"
pic8259 = "0.11.0"
uart_16550 = "0.3.1"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test]
panic = "abort"
